[package]
name = "castorup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = "4.1.3"
nom-bibtex = "0.3.0"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.24.2", features = ["full"] }
